test/good/classes/struct01.px

class Struct def
    Int n
    String s

r = Struct(2, "abc")
print r.n, r.s
