test/bad/functions/args04.px

func f(String s: "abc", Int n) def
    return
